# vosmic

./: .gitignore  .ruff.toml  README.md  pyproject.toml
.agents/rules/: cntxt.md  contexto_dev.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: ARCHITECTURE.md  CONTRACTS.md  INSTALL.md  PHASES.md  PRIMER_PROMPT.md  ROADMAP.md  TASK_REGISTRY.md  TESTING_GUIDE.md
docs/phases/: FASE_00_FOUNDATION.md  FASE_01_AUDIO_IO.md  FASE_02_DSP.md  FASE_03_INFERENCE.md  FASE_04_POSTPROCESSING.md  FASE_05_GUI.md  FASE_06_INTEGRATION_QA.md
scripts/: benchmark_e2e.py  check_cuda.py  run_regression.py  stress_test_vram.py
src/: __init__.py  main.py
src/audio_io/: __init__.py  capture.py  devices.py  output.py  passthrough.py  ring_buffer.py
src/core/: __init__.py  config.py  pipeline.py  profiler.py
src/dsp/: __init__.py  content_encoder.py  dsp_thread.py  feature_bundle.py  (+3 more)
tests/: __init__.py  test_anti_alias_filter.py  test_capture.py  test_compressor.py  test_config.py  test_content_encoder.py  test_cuda.py  test_dsp_thread.py  test_event_bus.py  test_feature_bundle.py  test_gain_matcher.py  test_inference_core.py  test_integration_main.py  test_level_meter.py  test_main_window.py  test_model_loader.py  test_model_manager.py  test_noise_gate.py  test_normalizer.py  test_output.py  test_passthrough.py  test_passthrough_fallback.py  test_performance_panel.py  test_pipeline.py  test_pitch_extractor.py  test_post_processor.py  test_profiler.py  test_ring_buffer.py  test_sample_rate_converter.py  test_scheduler.py  test_stitcher.py  test_system_tray.py
(+27 files in other folders)
