[project]
name = "vosmic"
version = "0.1.0"
description = "Real-time voice cloning with < 40ms latency"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "pyyaml>=6.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "onnxruntime-gpu>=1.16",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests requiring GPU hardware (skipped in CI)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
